BGE: Text to Mesh, then MouseOver does not work #39490

Closed
opened 2014-03-28 18:53:01 +01:00 by Allen Sanford · 11 comments

System Information
Operating system and graphics card
Linux 3.13.7-1-ARCH #1 SMP PREEMPT Mon Mar 24 20:06:08 CET 2014 x86_64 GNU/Linux

Blender Version
Broken: 2.70 19e627c
Worked: N/A

Blender Game Engine
OK so if I created a Text Object and then convert it to mesh object the MouseOver and MouseOver any Events do not work.

I have checked this and confirmed it and simplified it and tested it may ways.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
OK, open the attached blend file and press p to play. After which move the mouse over the text (Text was convert to a mesh) nothing happens, move it over the box and the event is triggered. I also add a plane for completeness as the text is converted to a mess. The mess works the text converted to a mess does not.MouseOverBug.blend

**System Information** Operating system and graphics card Linux 3.13.7-1-ARCH #1 SMP PREEMPT Mon Mar 24 20:06:08 CET 2014 x86_64 GNU/Linux **Blender Version** Broken: 2.70 19e627c Worked: N/A Blender Game Engine OK so if I created a Text Object and then convert it to mesh object the MouseOver and MouseOver any Events do not work. I have checked this and confirmed it and simplified it and tested it may ways. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps OK, open the attached blend file and press `p` to play. After which move the mouse over the text (Text was convert to a mesh) nothing happens, move it over the box and the event is triggered. I also add a plane for completeness as the text is converted to a mess. The mess works the text converted to a mess does not.[MouseOverBug.blend](https://archive.blender.org/developer/F83249/MouseOverBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @webternals

Added subscriber: @webternals
Bastien Montagne changed title from Text to Mesh MouseOver to BGE: Text to Mesh, then MouseOver does not work 2014-03-28 19:04:35 +01:00

Added subscribers: @Moguri, @mont29

Added subscribers: @Moguri, @mont29
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I confirm this bug.
Tested on 2.70 under opensuse 13.1 64 bits

I confirm this bug. Tested on 2.70 under opensuse 13.1 64 bits
Member

This is due to the converted mesh has the "Physics Type:" in the Physics panel set to "No collision".
I'm trying to fix it.
Meanwhile you can fix it setting manually the object to "Static".

This is due to the converted mesh has the "Physics Type:" in the Physics panel set to "No collision". I'm trying to fix it. Meanwhile you can fix it setting manually the object to "Static".
Member

I attach a fix to set the game engine defaults to the mesh resulting from Curve/Meta/Surf/Text conversion.

I attach a fix to set the game engine defaults to the mesh resulting from Curve/Meta/Surf/Text conversion.

This issue was referenced by blender/blender-addons-contrib@f5b79dff41

This issue was referenced by blender/blender-addons-contrib@f5b79dff412f61a2aa453a6ce50804e3425463a1

This issue was referenced by f5b79dff41

This issue was referenced by f5b79dff412f61a2aa453a6ce50804e3425463a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f5b79dff41.

Closed by commit f5b79dff41.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39490
No description provided.