Fix T39490: BGE: Text to Mesh, then MouseOver does not work

Non-mesh objects default to no collisions. lordloki provided a
patch that sets the collision properties for a mesh converted from
a curve/meta/surf/text to the default collision properties for
a mesh.